# bitbake-parser2

./: .gitignore  Makefile  README.md  bitbake.l  bitbake.y  meson.build  requirements.txt  setup.py
cbitbake/parser/: .gitignore  .systemd_239.bb.swp  Makefile  args.c  args.h  bbcompat.c  bbcompat.h  bitbake.l  bitbake.output  bitbake.tab.c  bitbake.tab.h  bitbake.y  cbitbake  convert.c  convert.h  core  dump.txt  files.c  files.h  lex.yy.c  lexer.h  lexer.l  log.c  log.h  main.c  node.c  node.h  parser.c  parser.h  parser.y  parser_types.c  parser_types.h  pyobj_ast.c  pyobj_ast.h  pyobj_d.c  pyobj_match.c  pyobj_match.h  pyobj_match_mock.c  python_api.c  python_api.h  (+10 more)
ext/: bbcompat.c  bbcompat.h  convert.c  convert.h  meson.build  pylog.c  pylog.h  pyo_ast.c  pyo_ast2.c  pyo_ast2.h  pyo_bb_parse.c  pyo_bb_parse.h  pyo_d.c  pyo_d.h  pyo_match.c  pyo_match.h  python_api.c  python_macro.h  python_utils.c  python_utils.h
lib/: files.c  files.h  lex.yy.c  lexer.h  lexer.l  log.c  log.h  meson.build  node.c  parser.tab.c  parser.y  parser_types.h  run.sh  setup.py  tags  utils.c  utils.h
pytest/: ast_mock.py  data_smart_mock.py  match_mock_test.py  match_test.py  parser_test.py
pytest/test_data/: libconfutils_1.3.4.bb
src/: Makefile  TODO  args.h  bb_cparser  files.c  files.h  lexer.l  log.c  log.h  main.c  parser.output  parser.tab.h  parser_types.c  parser_types.h  pyo_bb_parse.c  pyo_bb_parse.h  pyobj_ast.c  pyobj_ast.h  python_api.h
src/pytest/: foo.py  parser_test.py
